# OMICS

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_PHASES.md  README.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
cmake/: CompilerWarnings.cmake  ShaderCompilation.cmake  VersionManagement.cmake
docs/: BRANCHING_STRATEGY.md
shaders/: basic.frag  basic.vert
src/: main.cpp
src/core/: engine.cpp  engine.h  window.cpp  window.h
src/rendering/: vulkan_context.cpp  vulkan_context.h
